@@ -10,37 +10,34 @@ import com.gmail.nossr50.util.commands.CommandUtils;
 import com.gmail.nossr50.util.player.UserManager;
 import com.gmail.nossr50.util.scoreboards.ScoreboardManager;
 import com.gmail.nossr50.util.skills.SkillTools;
-import com.google.common.collect.ImmutableList;
-import java.util.ArrayList;
-import java.util.List;
+import com.gmail.nossr50.util.text.StringUtils;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
-import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
+
+import java.util.List;
 
 public class InspectCommand implements TabExecutor {
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command,
-            @NotNull String label, String[] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
         if (args.length == 1) {
             String playerName = CommandUtils.getMatchedPlayerName(args[0]);
-            final McMMOPlayer mmoPlayer = UserManager.getOfflinePlayer(playerName);
+            McMMOPlayer mcMMOPlayer = UserManager.getOfflinePlayer(playerName);
 
-            // If the mmoPlayer doesn't exist, create a temporary profile and check if it's present in the database. If it's not, abort the process.
-            if (mmoPlayer == null) {
-                PlayerProfile profile = mcMMO.getDatabaseManager()
-                        .loadPlayerProfile(playerName); // Temporary Profile
+            // If the mcMMOPlayer doesn't exist, create a temporary profile and check if it's present in the database. If it's not, abort the process.
+            if (mcMMOPlayer == null) {
+                PlayerProfile profile = mcMMO.getDatabaseManager().loadPlayerProfile(playerName); // Temporary Profile
 
                 if (!CommandUtils.isLoaded(sender, profile)) {
                     return true;
                 }
 
                 if (mcMMO.p.getGeneralConfig().getScoreboardsEnabled()
-                        && sender instanceof Player
+                        && sender instanceof Player player
                         && mcMMO.p.getGeneralConfig().getInspectUseBoard()) {
-                    ScoreboardManager.enablePlayerInspectScoreboard((Player) sender, profile);
+                    ScoreboardManager.enablePlayerInspectScoreboard(player, profile);
 
                     if (!mcMMO.p.getGeneralConfig().getInspectUseChat()) {
                         return true;
@@ -66,26 +63,23 @@ public class InspectCommand implements TabExecutor {
 
                 // Sum power level
                 int powerLevel = 0;
-                for (PrimarySkillType skill : SkillTools.NON_CHILD_SKILLS) {
+                for (PrimarySkillType skill : SkillTools.NON_CHILD_SKILLS)
                     powerLevel += profile.getSkillLevel(skill);
-                }
 
-                sender.sendMessage(LocaleLoader.getString("Commands.PowerLevel", powerLevel));
+                sender.sendMessage(LocaleLoader.getString("Commands.PowerLevel", StringUtils.formatNumber(powerLevel)));
             } else {
-                Player target = mmoPlayer.getPlayer();
-                boolean isVanished = CommandUtils.hidden(sender, target,
-                        Permissions.inspectHidden(sender));
+                Player target = mcMMOPlayer.getPlayer();
+                boolean isVanished = CommandUtils.hidden(sender, target, Permissions.inspectHidden(sender));
 
                 //Only distance check players who are online and not vanished
-                if (!isVanished && CommandUtils.tooFar(sender, target,
-                        Permissions.inspectFar(sender))) {
+                if (!isVanished && CommandUtils.tooFar(sender, target, Permissions.inspectFar(sender))) {
                     return true;
                 }
 
                 if (mcMMO.p.getGeneralConfig().getScoreboardsEnabled()
-                        && sender instanceof Player
+                        && sender instanceof Player player
                         && mcMMO.p.getGeneralConfig().getInspectUseBoard()) {
-                    ScoreboardManager.enablePlayerInspectScoreboard((Player) sender, mmoPlayer);
+                    ScoreboardManager.enablePlayerInspectScoreboard(player, mcMMOPlayer);
 
                     if (!mcMMO.p.getGeneralConfig().getInspectUseChat()) {
                         return true;
@@ -102,8 +96,7 @@ public class InspectCommand implements TabExecutor {
                 CommandUtils.printCombatSkills(target, sender);
                 CommandUtils.printMiscSkills(target, sender);
 
-                sender.sendMessage(
-                        LocaleLoader.getString("Commands.PowerLevel", mmoPlayer.getPowerLevel()));
+                sender.sendMessage(LocaleLoader.getString("Commands.PowerLevel", StringUtils.formatNumber(mcMMOPlayer.getPowerLevel())));
             }
 
             return true;
@@ -112,13 +105,10 @@ public class InspectCommand implements TabExecutor {
     }
 
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command,
-            @NotNull String alias, String[] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         if (args.length == 1) {
-            List<String> playerNames = CommandUtils.getOnlinePlayerNames(sender);
-            return StringUtil.copyPartialMatches(args[0], playerNames,
-                    new ArrayList<>(playerNames.size()));
+            return CommandUtils.getOnlinePlayerNames(sender).stream().filter(s -> s.startsWith(args[0])).toList();
         }
-        return ImmutableList.of();
+        return List.of();
     }
 }
