@@ -10,29 +10,26 @@ import com.gmail.nossr50.util.Permissions;
 import com.gmail.nossr50.util.commands.CommandUtils;
 import com.gmail.nossr50.util.player.UserManager;
 import com.gmail.nossr50.util.text.StringUtils;
-import com.google.common.collect.ImmutableList;
-import java.util.ArrayList;
-import java.util.List;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabExecutor;
 import org.bukkit.entity.Player;
 import org.bukkit.metadata.FixedMetadataValue;
-import org.bukkit.util.StringUtil;
 import org.jetbrains.annotations.NotNull;
+
+import java.util.List;
 
 public class McTopCommand implements TabExecutor {
     @Override
-    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command,
-            @NotNull String label, String[] args) {
+    public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, String[] args) {
         PrimarySkillType skill = null;
 
         switch (args.length) {
-            case 0:
+            case 0 -> {
                 display(1, skill, sender, command);
                 return true;
-
-            case 1:
+            }
+            case 1 -> {
                 if (StringUtils.isInt(args[0])) {
                     display(Math.abs(Integer.parseInt(args[0])), skill, sender, command);
                     return true;
@@ -46,15 +43,14 @@ public class McTopCommand implements TabExecutor {
 
                 // Check if the command is for Maces but the MC version is not correct
                 if (skill == PrimarySkillType.MACES
-                        && !mcMMO.getCompatibilityManager().getMinecraftGameVersion()
-                        .isAtLeast(1, 21, 0)) {
+                        && !mcMMO.getCompatibilityManager().getMinecraftGameVersion().isAtLeast(1, 21, 0)) {
                     return true;
                 }
 
                 display(1, skill, sender, command);
                 return true;
-
-            case 2:
+            }
+            case 2 -> {
                 if (CommandUtils.isInvalidInteger(sender, args[1])) {
                     return true;
                 }
@@ -67,28 +63,25 @@ public class McTopCommand implements TabExecutor {
 
                 // Check if the command is for Maces but the MC version is not correct
                 if (skill == PrimarySkillType.MACES
-                        && !mcMMO.getCompatibilityManager().getMinecraftGameVersion()
-                        .isAtLeast(1, 21, 0)) {
+                        && !mcMMO.getCompatibilityManager().getMinecraftGameVersion().isAtLeast(1, 21, 0)) {
                     return true;
                 }
 
                 display(Math.abs(Integer.parseInt(args[1])), skill, sender, command);
                 return true;
-
-            default:
+            }
+            default -> {
                 return false;
+            }
         }
     }
 
     @Override
-    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command,
-            @NotNull String alias, String[] args) {
+    public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, String[] args) {
         if (args.length == 1) {
-            return StringUtil.copyPartialMatches(args[0],
-                    mcMMO.p.getSkillTools().LOCALIZED_SKILL_NAMES,
-                    new ArrayList<>(mcMMO.p.getSkillTools().LOCALIZED_SKILL_NAMES.size()));
+            return mcMMO.p.getSkillTools().LOCALIZED_SKILL_NAMES.stream().filter(s -> s.startsWith(args[0])).toList();
         }
-        return ImmutableList.of();
+        return List.of();
     }
 
     private void display(int page, PrimarySkillType skill, CommandSender sender, Command command) {
@@ -97,49 +90,46 @@ public class McTopCommand implements TabExecutor {
             return;
         }
 
-        if (sender instanceof Player) {
+        if (sender instanceof Player player) {
             if (!CommandUtils.hasPlayerDataKey(sender)) {
                 return;
             }
 
-            final McMMOPlayer mmoPlayer = UserManager.getPlayer(sender.getName());
-            long cooldownMillis = Math.max(mcMMO.p.getGeneralConfig().getDatabasePlayerCooldown(),
-                    1750);
+            McMMOPlayer mcMMOPlayer = UserManager.getPlayer(player);
+            if (mcMMOPlayer == null) {
+                sender.sendMessage(LocaleLoader.getString("Profile.PendingLoad"));
+                return;
+            }
+            long cooldownMillis = Math.max(mcMMO.p.getGeneralConfig().getDatabasePlayerCooldown(), 1750);
 
-            if (mmoPlayer.getDatabaseATS() + cooldownMillis > System.currentTimeMillis()) {
-                double seconds =
-                        ((mmoPlayer.getDatabaseATS() + cooldownMillis) - System.currentTimeMillis())
-                                / 1000.0D;
+            if (mcMMOPlayer.getDatabaseATS() + cooldownMillis > System.currentTimeMillis()) {
+                double seconds = ((mcMMOPlayer.getDatabaseATS() + cooldownMillis) - System.currentTimeMillis()) / 1000.0D;
                 if (seconds < 1) {
                     seconds = 1;
                 }
 
-                sender.sendMessage(LocaleLoader.formatString(
-                        LocaleLoader.getString("Commands.Database.Cooldown"), seconds));
+                sender.sendMessage(LocaleLoader.formatString(LocaleLoader.getString("Commands.Database.Cooldown"), seconds));
                 return;
             }
 
-            if (((Player) sender).hasMetadata(MetadataConstants.METADATA_KEY_DATABASE_COMMAND)) {
+            if (player.hasMetadata(MetadataConstants.METADATA_KEY_DATABASE_COMMAND)) {
                 sender.sendMessage(LocaleLoader.getString("Commands.Database.Processing"));
                 return;
             } else {
-                ((Player) sender).setMetadata(MetadataConstants.METADATA_KEY_DATABASE_COMMAND,
-                        new FixedMetadataValue(mcMMO.p, null));
+                player.setMetadata(MetadataConstants.METADATA_KEY_DATABASE_COMMAND, new FixedMetadataValue(mcMMO.p, null));
             }
 
-            mmoPlayer.actualizeDatabaseATS();
+            mcMMOPlayer.actualizeDatabaseATS();
         }
 
         display(page, skill, sender);
     }
 
     private void display(int page, PrimarySkillType skill, CommandSender sender) {
-        boolean useBoard =
-                (sender instanceof Player) && (mcMMO.p.getGeneralConfig().getTopUseBoard());
+        boolean useBoard = (sender instanceof Player) && (mcMMO.p.getGeneralConfig().getTopUseBoard());
         boolean useChat = !useBoard || mcMMO.p.getGeneralConfig().getTopUseChat();
 
-        mcMMO.p.getFoliaLib().getScheduler()
-                .runAsync(new McTopCommandAsyncTask(page, skill, sender, useBoard, useChat));
+        mcMMO.p.getFoliaLib().getScheduler().runAsync(new McTopCommandAsyncTask(page, skill, sender, useBoard, useChat));
     }
 
     private PrimarySkillType extractSkill(CommandSender sender, String skillName) {
